--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
+    "start": "nodemon index.js",
     "start-server": "node index.js"
   },
   "author": "Maximilian Schwarzmüller",
@@ -20,7 +20,6 @@
     "express-handlebars": "^3.0.0",
     "mongodb": "^3.1.6",
     "mysql2": "^1.6.1",
-    "pug": "^2.0.3",
-    "sequelize": "^5.0.0-beta.11"
+    "pug": "^2.0.3"
   }
 }
